// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InventoryStats > the markup of the first mode and of the per-customer mode > per customer 1`] = `
"<div class="app-page">
  <header>
    <div class="page-title">
      <h3>
<svg viewBox="0 0 16 16" width="1.2em" height="1.2em">
          <path fill="currentColor" d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1z">
</path>
        </svg>Total sales in YEAR</h3>
    </div>
  </header>
  <div class="app-detail panel">
    <div class="row align-items-center">
      <div class="col-1">
<a class="" href="#" title="Year back">
<svg viewBox="0 0 16 16" width="1.2em" height="1.2em" font-scale="1.8">
            <path fill="currentColor" fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8">
</path>
          </svg>
</a>
</div>
      <div class="col-10 text-center">
        <div class="row">
          <div class="col-6">
            <div id="ID" role="group" class="b-form-group">
              
              <label id="ID" for="graph-type" class="form-label d-block col-form-label-sm">Graph type</label>
<select id="graph-type" class="form-select form-select-sm">
                <option value="total-material-sales">Total material sales</option>
                <option value="total-sales-per-supplier">Total sales per supplier</option>
                <option value="total-material-sales-per-customer" selected="">Total material sales per customer</option>
                <option value="total-sales-per-material-customer">Total sales per material per customer</option>
                <option value="total-sales-per-material-supplier">Total sales per material per supplier</option>
              </select>
              
              
              
            </div>
          </div>
          <div class="col-6">
            <div id="ID" role="group" class="b-form-group">
              
              <label id="ID" for="graph-field" class="form-label d-block col-form-label-sm">Show</label>
              <div id="graph-field" role="radiogroup" class="btn-group-md bv-no-focus-ring mb-3" tabindex="-1">
                <div class="form-check form-check-inline">
<input id="ID" item="sum_amount" text="Amount" class="form-check-input" type="radio" name="Amount" value="sum_amount">
<label for="ID" class="form-check-label">Amount</label>
</div>
                <div class="form-check form-check-inline">
<input id="ID" item="sum_price_selling" text="Selling price" class="form-check-input" type="radio" name="Selling price" value="sum_price_selling">
<label for="ID" class="form-check-label">Selling price</label>
</div>
                <div class="form-check form-check-inline">
<input id="ID" item="profit" text="Profit" class="form-check-input" type="radio" name="Profit" value="profit">
<label for="ID" class="form-check-label">Profit</label>
</div>
              </div>
              
              
              
            </div>
          </div>
        </div>
      </div>
      <div class="col-1">
        <div class="float-right">
<a class="" href="#" title="Next year">
<svg viewBox="0 0 16 16" width="1.2em" height="1.2em" font-scale="1.8">
              <path fill="currentColor" fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8">
</path>
            </svg>
</a>
</div>
      </div>
    </div>
    <div class="bar-stub">{"labels":["Jansen"],"datasets":[{"label":"Total sales per customer in YEAR","data":[12],"backgroundColor":"#f87979"}]}</div>
    <div class="table-responsive-md data-table">
      <table id="year-table" class="table b-table table-sm" ariabusy="false">
        
        <thead class="">
          <tr class="">
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none">Customer</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none">Total amount</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none">Total selling</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none">Total purchase</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none">Profit</th>
          </tr>
          
        </thead>
        <tbody class="">
          
          <tr class="">
            <td class="">
              Jansen
            </td>
            <td class="">
              12 <span>(60%)</span>
            </td>
            <td class="">
               € 50.50 <span>(40.25%)</span>
            </td>
            <td class="">
               € 30.00
            </td>
            <td class="">
               € 20.50
            </td>
          </tr>
          
          
        </tbody>
        
        
      </table>
    </div>
  </div>
</div>"
`;

exports[`InventoryStats > the markup of the first mode and of the per-customer mode > total material sales 1`] = `
"<div class="app-page">
  <header>
    <div class="page-title">
      <h3>
<svg viewBox="0 0 16 16" width="1.2em" height="1.2em">
          <path fill="currentColor" d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1z">
</path>
        </svg>Total sales in YEAR</h3>
    </div>
  </header>
  <div class="app-detail panel">
    <div class="row align-items-center">
      <div class="col-1">
<a class="" href="#" title="Year back">
<svg viewBox="0 0 16 16" width="1.2em" height="1.2em" font-scale="1.8">
            <path fill="currentColor" fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8">
</path>
          </svg>
</a>
</div>
      <div class="col-10 text-center">
        <div class="row">
          <div class="col-6">
            <div id="ID" role="group" class="b-form-group">
              
              <label id="ID" for="graph-type" class="form-label d-block col-form-label-sm">Graph type</label>
<select id="graph-type" class="form-select form-select-sm">
                <option selected="" value="total-material-sales">Total material sales</option>
                <option value="total-sales-per-supplier">Total sales per supplier</option>
                <option value="total-material-sales-per-customer">Total material sales per customer</option>
                <option value="total-sales-per-material-customer">Total sales per material per customer</option>
                <option value="total-sales-per-material-supplier">Total sales per material per supplier</option>
              </select>
              
              
              
            </div>
          </div>
          <div class="col-6">
            <div id="ID" role="group" class="b-form-group">
              
              <label id="ID" for="graph-field" class="form-label d-block col-form-label-sm">Show</label>
              <div id="graph-field" role="radiogroup" class="btn-group-md bv-no-focus-ring mb-3" tabindex="-1">
                <div class="form-check form-check-inline">
<input id="ID" item="sum_amount" text="Amount" class="form-check-input" type="radio" name="Amount" value="sum_amount">
<label for="ID" class="form-check-label">Amount</label>
</div>
                <div class="form-check form-check-inline">
<input id="ID" item="sum_price_selling" text="Selling price" class="form-check-input" type="radio" name="Selling price" value="sum_price_selling">
<label for="ID" class="form-check-label">Selling price</label>
</div>
                <div class="form-check form-check-inline">
<input id="ID" item="profit" text="Profit" class="form-check-input" type="radio" name="Profit" value="profit">
<label for="ID" class="form-check-label">Profit</label>
</div>
              </div>
              
              
              
            </div>
          </div>
        </div>
      </div>
      <div class="col-1">
        <div class="float-right">
<a class="" href="#" title="Next year">
<svg viewBox="0 0 16 16" width="1.2em" height="1.2em" font-scale="1.8">
              <path fill="currentColor" fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8">
</path>
            </svg>
</a>
</div>
      </div>
    </div>
    <div class="bar-stub">{"labels":["Bolt"],"datasets":[{"label":"Total sales in YEAR","data":[12],"backgroundColor":"#f87979"}]}</div>
    <div class="table-responsive-md data-table">
      <table id="year-table" class="table b-table table-sm" ariabusy="false">
        
        <thead class="">
          <tr class="">
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none">Material</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none">Total amount</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none">Total selling</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none">Total purchase</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none">Profit</th>
          </tr>
          
        </thead>
        <tbody class="">
          
          <tr class="">
            <td class="">
              Bolt
            </td>
            <td class="">
              12 <span>(60%)</span>
            </td>
            <td class="">
               € 50.50 <span>(40.25%)</span>
            </td>
            <td class="">
               € 30.00
            </td>
            <td class="">
               € 20.50
            </td>
          </tr>
          
          
        </tbody>
        
        
      </table>
    </div>
  </div>
</div>"
`;

exports[`StatsTable > the markup 1`] = `
"<div class="app-page">
  <header>
    <div class="page-title">
      <h3>
<svg viewBox="0 0 16 16" width="1.2em" height="1.2em">
          <path fill="currentColor" d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1z">
</path>
        </svg> Stats in YEAR</h3>
      <div class="btn-toolbar" role="toolbar" aria-label="Group">
        <div class="btn-group me-1" role="group" aria-label="Group">
<button class="btn btn-sm btn-secondary" type="button" title="Refresh">
<svg viewBox="0 0 16 16" width="1.2em" height="1.2em" aria-hidden="true">
              <g fill="currentColor">
                <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41m-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9">
</path>
                <path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5 5 0 0 0 8 3M3.1 9a5.002 5.002 0 0 0 8.757 2.182a.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9z">
</path>
              </g>
            </svg>
</button>
<button class="btn btn-sm btn-secondary" type="button" title="Download">
<svg viewBox="0 0 16 16" width="1.2em" height="1.2em" aria-hidden="true">
              <g fill="currentColor">
                <path d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773C16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318C1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593c.143-.863.698-1.723 1.464-2.383">
</path>
                <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708z">
</path>
              </g>
            </svg>
</button>
</div>
<input class="form-control form-control-sm w-auto me-2" aria-label="Search" placeholder="Search">
        
        
      </div>
    </div>
  </header>
  <div class="app-detail panel">
    <div class="row align-items-center">
      <div class="col-1">
<a class="" href="#" title="Year back">
<svg viewBox="0 0 16 16" width="1.2em" height="1.2em" font-scale="1.8">
            <path fill="currentColor" fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8">
</path>
          </svg>
</a>
</div>
      <div class="col-1">
        <div class="float-right">
<a class="" href="#" title="Next year">
<svg viewBox="0 0 16 16" width="1.2em" height="1.2em" font-scale="1.8">
              <path fill="currentColor" fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8">
</path>
            </svg>
</a>
</div>
      </div>
    </div>
    <div class="table-responsive-md data-table">
      <table id="stats-table" class="table b-table table-sm" ariabusy="false">
        
        <thead class="">
          <tr class="">
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none" width="20%">Supplier</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none" width="20%">Product</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none" width="10%">Total sales</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none" width="10%">Turnover</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none" width="10%">Profit</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none" width="10%">Margin product</th>
            <th scope="col" class="b-table-sortable-column" tabindex="0" aria-sort="none" width="10%">Stock</th>
            <th scope="col" class="" width="10%">Locations</th>
          </tr>
          
        </thead>
        <tbody class="">
          
          <tr class="">
            <td class="">
              Acme
            </td>
            <td class="">
              Bolt
            </td>
            <td class="">
              7
            </td>
            <td class="">
               € 105.50
            </td>
            <td class="">
               € 30.00
            </td>
            <td class="">
              12.35 %
            </td>
            <td class="">
              40
            </td>
            <td class="">
              <span>Shelf A: 25</span>
<span>Shelf B: 15</span>
            </td>
          </tr>
          
          
        </tbody>
        
        
      </table>
    </div>
  </div>
</div>"
`;
